# lab08

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  Dockerfile  README.md
.github/workflows/: cfg.yml
banking/: Account.cpp  Account.h  CMakeLists.txt  Transaction.cpp
tests/: test.cpp
